homepage desktop fix alignment of "Featured"

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -236,11 +236,9 @@
     margin-bottom: 20px;
     padding-bottom: 15px;
     border-bottom: 1px solid #d2e8fa;
-    /*max-width: 630px;*/
-    float: right;
-}
-.lergo-h0.text-tweak1 {
-    margin-bottom: 5px
+    max-width: 725px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 
